samples/e2e-dubbo/platform/kube/e2e-dubbo-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: e2e-dubbo
  labels:
    istio-injection: disabled
