samples/e2e-dubbo/platform/kube/dubbo-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: e2e-dubbo-consumer
  name: e2e-dubbo-consumer
  namespace: e2e-dubbo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: e2e-dubbo-consumer
  strategy: {}
  template:
    metadata:
      labels:
        app: e2e-dubbo-consumer
      name: e2e-dubbo-consumer
      namespace: e2e-dubbo
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: network
                operator: DoesNotExist
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - e2e-dubbo-provider
              topologyKey: kubernetes.io/hostname
            weight: 100
      tolerations:
      - effect: NoSchedule
        key: istio
        operator: Exists
      containers:
      - command:
        - bash
        - -c
        - |
          java \
            -Ddubbo.reference.com.alibaba.boot.dubbo.demo.consumer.DemoService.url=dubbo://e2e-dubbo-provider:12345 \
            -Dlogging.level.org.springframework.web=DEBUG \
            -jar dubbo-consumer.jar
        image: docker-hub.ucweb.com:5000/uaewa/e2e-dubbo-consumer:master-20180829195949
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 8080
          protocol: TCP
