samples/e2e-dubbo/platform/kube/dubbo-consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    servicetype: dubbo
  name: e2e-dubbo-consumer
  namespace: e2e-dubbo
  labels:
    app: e2e-dubbo-consumer
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    name: http-client
    protocol: TCP
  selector:
    app: e2e-dubbo-consumer
